# amazon-q-developer-cli

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/ISSUE_TEMPLATE/: 1_bug_report_template.yml
.github/workflows/: rust.yml
crates/cli/: Cargo.toml
crates/cli/test_mcp_server/: test_server.rs
crates/q_chat/src/: lib.rs
crates/q_cli/src/cli/chat/: parse.rs
